crates/tui/snapshots/inline/frame/input.snap
---
source: crates/tui/src/app/inline/frame_tests.rs
expression: text(&buffer)
---
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
────────────────────────────────────────────────────────────────────────────────
> 继续检查终端历史                                                              
────────────────────────────────────────────────────────────────────────────────
                                                                                
  ⏸ Manual
