crates/tui/snapshots/inline/frame/model_pin_actions_chinese.snap
---
source: crates/tui/src/app/inline/frame_tests.rs
expression: "format!(\"Pinned\\n{pinned}\\n\\nUnpinned\\n{unpinned_chinese}\")"
---
Pinned
                                                                                                    
    ▄  ▄     Ash Code v0.1.0                                                                        
  ▗█▛██▜█▖   Automatic model                                                                        
  ▝▜████▛▘   .                                                                                      
    ▝  ▘                                                                                            
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
─ 模型 ─────────────────────────────────────────────────────────────────────────────────────────────
                                                                                                    
  ╭──────────────────────────────────────────────────────────────────────────────────────────────╮  
  │ 搜索模型                                                                                     │  
  ╰──────────────────────────────────────────────────────────────────────────────────────────────╯  
  已固定 ─────────────────────────────────────────────────────────────────────────────────────────  
> GPT Test    ← ██ ██ ██ → High                                                                     
                                                                                                    
  ↑↓ 选择 · Tab 设置项 · ←→ 调整 · / 搜索 · p 取消固定 · Enter 应用 · Esc 取消                      

Unpinned
                                                                                                    
    ▄  ▄     Ash Code v0.1.0                                                                        
  ▗█▛██▜█▖   Automatic model                                                                        
  ▝▜████▛▘   .                                                                                      
    ▝  ▘                                                                                            
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
─ 模型 ─────────────────────────────────────────────────────────────────────────────────────────────
                                                                                                    
  ╭──────────────────────────────────────────────────────────────────────────────────────────────╮  
  │ 搜索模型                                                                                     │  
  ╰──────────────────────────────────────────────────────────────────────────────────────────────╯  
> GPT Test    ← ██ ██ ██ → High                                                                     
                                                                                                    
  ↑↓ 选择 · Tab 设置项 · ←→ 调整 · / 搜索 · p 固定 · Enter 应用 · Esc 取消
