crates/tui/snapshots/inline/frame/short_query_while_browsing.snap
---
source: crates/tui/src/app/inline/frame_tests.rs
expression: frame
---
┌Next step  (1/1)────────────────────────┐
│How should the work continue?           │
│> Continue  Use the proposed approach   │
│  Type your own answer  Answer in the in│
│                                        │
└────────────────────────────────────────┘
                                          
──────────────────────────────────────────
> chat draft stays here                   
──────────────────────────────────────────
                                          
  Enter to answer
